MCS toggle command line tool
`npm install -g .` will now install an `mcs` bin that will take a
serialization or Montage Component Sheet as its input and dump the
opposite form to output.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "montage",
   "bin": {
-    "montage": "bin/montage"
+    "montage": "bin/montage",
+    "mcs": "bin/mcs"
   },
   "overlay": {
     "browser": {
